Additional PTLA customization

--- a/docassemble/MaineSNAPEstimatorDemo/data/questions/SnapCalculator-logic.yml
+++ b/docassemble/MaineSNAPEstimatorDemo/data/questions/SnapCalculator-logic.yml
@@ -1,7 +1,7 @@
 ---
 metadata:
   title: |
-    Maine SNAP Calculator
+    Maine SNAP Benefits Estimator
   short title: |
     ME SNAP Calculator
   description: |
@@ -11,13 +11,14 @@ metadata:
 ---
 include: 
   - docassemble.AssemblyLine:assembly_line.yml
-  - ptla_custom_organization.yml
+  - custom_ptla_theme_ngb.yml
 ---
 features:
   question back button: True
   navigation back button: False
   # theme file downloaded from: bootstrap theme: https://bootswatch.com/cerulean/bootstrap.min.css
-  #css: 
+  css:
+    - ptlatheme.css
     #- colors.css
     #- bootstrap.min.css
   #hide navbar: True 
