Plain language edits to interview

--- a/docassemble/MaineSNAPEstimatorDemo/data/questions/SnapCalculator-questions.yml
+++ b/docassemble/MaineSNAPEstimatorDemo/data/questions/SnapCalculator-questions.yml
@@ -32,7 +32,7 @@ subquestion: |
   
   Welcome to PTLA's **Maine SNAP Benefits Estimator** where you can estimate monthly SNAP benefits for Maine households. 
 
-  We have tried to make this tool easy to understand - but eligibilty for SNAP can be complicated. We cannot guarantee the result you get from this calculator will be the amount of SNAP benefits you receive, if you are eligible. But it can help you understand how those calculations work, and get an idea of what SNAP benefits you may be eligible for. 
+  We have tried to make this tool easy to understand - but eligibilty for SNAP can be complicated. We cannot guarantee the result from this calculator will be the amount of SNAP benefits you get, if you are eligible. But it can help you understand how those calculations work, and get an idea of what SNAP benefits you may be eligible for. 
   
   <strong>Insert link to new SNAP Client ed/other additional info here.</strong>
   
