Adjusting short interview title in theme file

--- a/docassemble/MaineSNAPEstimatorDemo/data/questions/SnapCalculator-logic.yml
+++ b/docassemble/MaineSNAPEstimatorDemo/data/questions/SnapCalculator-logic.yml
@@ -3,7 +3,7 @@ metadata:
   title: |
     Maine SNAP Benefits Estimator
   short title: |
-    ME SNAP Calculator
+    ME SNAP Benefits Estimator
   description: |
     The Maine SNAP calculator is built to be used by people familiar with the basic SNAP rules to estimate the monthly SNAP benefit amount a household may receive in Maine. This tool is built upon the work of Mass Legal Services and their MA SNAP Calculator 
   #exit url: https://www.masslegalservices.org/content/online-snap-calculator
