--- a/docassemble/MaineSNAPEstimatorDemo/data/questions/custom_ptla_theme_ngb.yml
+++ b/docassemble/MaineSNAPEstimatorDemo/data/questions/custom_ptla_theme_ngb.yml
@@ -24,7 +24,7 @@ metadata:
   title: |
     Maine SNAP Benefits Estimator
   short title: |
-    ME SNAP Calculator   
+    ME SNAP Estimator   
   exit url: |
     https://www.ptla.org
 ---
