Updating yearly COLA numbers for FY 2026

--- a/docassemble/MaineSNAPEstimatorDemo/data/questions/SnapCalculator-questions.yml
+++ b/docassemble/MaineSNAPEstimatorDemo/data/questions/SnapCalculator-questions.yml
@@ -99,7 +99,9 @@ id: Terms
 question: |
   Maine SNAP Benefits Estimator: Pine Tree Legal Forms Project
 subquestion: |
-    Welcome to PTLA's **Maine SNAP Benefits Estimator** where you can estimate monthly SNAP benefits for Maine households. 
+    Welcome to PTLA's **Maine SNAP Benefits Estimator** where you can estimate monthly SNAP benefits for Maine households.
+    
+    <strong>October 1st, 2025 Notice</strong>: We have updated the yearly figures for this estimator, but <strong>have not</strong> yet adjusted this tool to reflect any other recent changes to these calculations. We will be updating this tool again soon!
     
     <strong>SNAP eligibility is calculated based on your</strong>:
     <ul>
